segunda Version con links

--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
         <div class="footer-section">
             <p class="footer-txt">by Edwin Baquiax </p>
 
-            <a href="#">
+            <a href="https://www.linkedin.com/in/santos-edwin-fernando-baquiax-ixchajchal" target="_blank">
                 <div class="footer-txt">
-
                     <img class="footer-img-linkedin" src="/Challeng/Decodificador/img/linkedin-icon-512x512-vkm0drb1.png" alt="">
                 </div>
             </a>
-            <a href="#">
+            <a href="https://github.com/SEdwinFBI">
                 <div class="footer-txt">
-
                     <img class="footer-img-github" src="/Challeng/Decodificador/img/25231.png" alt="">
                 </div>
             </a>
